--- a/css/main.css
+++ b/css/main.css
@@ -538,6 +538,63 @@ aside{
 
 @media screen and (min-width: 1200px) {
   /* Desktop Styles Here */
+
+      .content-wrapper{
+        max-width: 960px;
+      }
+
+      /* Main */
+
+      .hero-area h1 {
+        width: 60%;
+      }
+
+      /* Aside */
+
+      aside .content-wrapper{
+        justify-content: space-around;
+      }
+
+      aside .content-wrapper .form-description, aside .content-wrapper .form{
+        flex-basis: 33.3%;
+      }
+
+      /* Features */
+
+      .features h2 {
+        /* width? */
+      }
+
+      .features article{
+        flex-basis: 33.33%;
+      }
+
+      /* Reviews */
+
+      .reviews article div{
+        width: 100%;
+        /* ? */
+      }
+
+
+      /* ======== ABOUT PAGE ======== */
+
+      .mission h2{
+        width: 92%;
+
+        /* also .contact-secton .content-wrappy h2 ? */
+      }
+
+
+
+
+      /* ======== FAQ PAGE ======== */
+
+      .faq h2{
+        width: 100%;
+      }
+
+
 }
 
 /* ==========================================================================
