Add email field and button

--- a/css/main.css
+++ b/css/main.css
@@ -193,6 +193,8 @@ header nav ul li {
 
 header nav ul li a{
   text-transform: uppercase;
+  font-size: 1.125em;
+  font-weight: bold;
 }
 
 
@@ -267,6 +269,7 @@ aside{
 /* Features */
 
 .features{
+  background: url('../img/features-background.jpg');
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -340,6 +343,30 @@ aside{
 }
 
 
+/* -------- Form -------- */
+
+
+input[type=text]{
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+
+input[type=button]{
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
 
 
 /* ==========================================================================
