--- a/css/main.css
+++ b/css/main.css
@@ -244,8 +244,8 @@ footer .copyright{
   align-items: center;
   justify-content: center;
   flex-flow: row wrap;
-  background: url('../img/hero-img.jpg');
-  object-fit: cover;
+  background: url('../img/hero-img.jpg') center no-repeat;
+  background-size: cover;
 }
 
 /* Aside */
@@ -258,18 +258,11 @@ aside{
   background: #527158;
 }
 
-.form-description{
-
-}
-
-.form{
-
-}
-
 /* Features */
 
 .features{
-  background: url('../img/features-background.jpg');
+  background: url('../img/features-background.jpg') center no-repeat;
+  background-size: cover;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
