--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,8 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* -------- Global Styles -------- */
+
 html {
   font-size: 16px;
    }
@@ -98,7 +100,6 @@ body {
   line-height: 1.2em;
 }
 
-
 h1, h2, h3, h4{
   font-family: 'poppins', sans-serif;
   font-weight: 400;
@@ -106,17 +107,15 @@ h1, h2, h3, h4{
 }
 
 h1{
-  font-size: 3.75em;
-  font-weight: 400;
-  line-height: 1.2em;
-}
-
-h2 {
   font-size: 2.25em;
 }
 
-h3, h4{
+h2 {
   font-size: 1.875em;
+}
+
+h3, h4{
+  font-size: 1.125em;
 }
 
 a{
@@ -126,6 +125,14 @@ a{
 
 address {
   font-style: normal;
+}
+
+img {
+  width: 100%;
+}
+
+figure{
+  margin: 0;
 }
 
 
@@ -160,12 +167,19 @@ header .content-wrapper {
   margin: 0;
 }
 
+header .content-wrapper figure {
+  flex-basis: 67%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 .header-divider {
   width: 100%;
   height: 1px;
   background: #3a3a3a;
-  margin: 10px 0 20px 0;
+  margin-top: 10px;
 
 }
 
@@ -181,14 +195,15 @@ header nav ul {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  width: 100%%;
+  width: 100%;
+  margin: 0;
   padding: 0;
 
 }
 
 header nav ul li {
   display: flex;
-  margin: 16px 20px;
+  margin-top: 16px;
 }
 
 header nav ul li a{
@@ -241,14 +256,23 @@ footer .copyright{
 
 .hero-area {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   flex-flow: row wrap;
   background: url('../img/hero-img.jpg') center no-repeat;
   background-size: cover;
+  min-height: 500px;
+}
+
+.hero-area .content-wrapper h1{
+  margin: 0;
 }
 
 /* Aside */
+
+aside .content-wrapper {
+  margin: 30px 0;
+}
 
 aside{
   display: flex;
@@ -256,6 +280,14 @@ aside{
   justify-content: center;
   flex-flow: row wrap;
   background: #527158;
+}
+
+aside h3{
+  font-size: 1.125em;
+}
+
+aside .form-description h3{
+  margin: 0;
 }
 
 /* Features */
@@ -269,7 +301,7 @@ aside{
 }
 
 .features h2{
-  margin-bottom: 60px;
+  margin: 0 25px 60px 0;
 }
 
 .features article{
@@ -301,12 +333,16 @@ aside{
 }
 
 .reviews h2{
-  margin: 20px 0;
+  margin-top: 0;
 }
 
 .reviews h3{
   width: 55%;
   margin: 20px 0;
+}
+
+.reviews article p{
+  margin-bottom: 0;
 }
 
 
@@ -317,6 +353,11 @@ aside{
   align-items: center;
   justify-content: center;
   flex-flow: row wrap;
+  background: #527158;
+}
+
+.mission h2{
+  margin-top:0;
 }
 
 .contact-section{
@@ -324,6 +365,11 @@ aside{
   align-items: center;
   justify-content: center;
   flex-flow: row wrap;
+  background: #2a423a;
+}
+
+.contact-section h2, .contact-section h3{
+  margin-top: 0;
 }
 
 /* ---------- Mobile Styles - FAQ Page ----------*/
@@ -333,6 +379,23 @@ aside{
   align-items: center;
   justify-content: center;
   flex-flow: row wrap;
+  background: #527158;
+}
+
+.faq-content{
+  margin-top: 50px;
+}
+
+.faq h2{
+  margin-top: 0;
+}
+
+.faq h4 {
+  margin-bottom: 0;
+}
+
+.faq p{
+  font-size: 0.875em;
 }
 
 
