--- a/css/main.css
+++ b/css/main.css
@@ -356,6 +356,21 @@ aside .form-description h3{
   margin-top:0;
 }
 
+.map-container{
+  position: relative;
+  padding-bottom: 125%;
+  height: 0;
+  overflow: hidden;
+}
+
+.map-container iframe{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .contact-section{
   display: flex;
   align-items: center;
@@ -674,6 +689,12 @@ input[type=button]{
         width: 47%;
       }
 
+      /* Map */
+
+      .map-container{
+        padding-bottom: 45%;
+      }
+
       /* Contact */
 
       .contact-section .content-wrapper h2{
@@ -756,6 +777,10 @@ input[type=button]{
         width: 92%;
 
         /* also .contact-secton .content-wrappy h2 ? */
+      }
+
+      .map-container{
+        padding-bottom: 37.5%;
       }
 
 
