--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,12 @@ aside .form-description h3{
   margin: 0;
 }
 
+.features i{
+  font-size: 3.75em;
+  padding-bottom: 40px;
+}
+
+
 /* Reviews */
 
 .reviews{
@@ -610,6 +616,7 @@ input[type=button]{
 
       .features article{
         display: flex;
+        flex-flow: column;
         justify-content: center;
         align-items: center;
         flex-basis: 50%;
@@ -733,14 +740,37 @@ input[type=button]{
 @media screen and (min-width: 1200px) {
   /* Desktop Styles Here */
 
+      body{
+        line-height: 1.875em;
+      }
+
+      h1{
+        font-size: 3.75em;
+      }
+
+      h2{
+        font-size: 2.25em;
+      }
+
+      h3, h4 {
+        font-size: 1.875em;
+      }
+
       .content-wrapper{
         max-width: 960px;
+        margin: 50px 0;
+      }
+
+      /* Header */
+
+      header .content-wrapper figure{
+        flex-basis: 30%;
       }
 
       /* Main */
 
       .hero-area h1 {
-        width: 75%;
+        width: 70%;
       }
 
       /* Aside */
@@ -753,10 +783,14 @@ input[type=button]{
         flex-basis: 33.3%;
       }
 
+      aside p{
+        font-size: 1.125em;
+      }
+
       /* Features */
 
       .features h2 {
-        /* width? */
+        opacity: 1;
       }
 
       .features article{
@@ -765,9 +799,16 @@ input[type=button]{
 
       /* Reviews */
 
-      .reviews article div{
-        width: 100%;
-        /* ? */
+      .reviews .content-wrapper article{
+        align-items: flex-start;
+      }
+
+      .reviews article figure, .reviews article div{
+        flex-basis: 47%;
+      }
+
+      .reviews p{
+        font-size: 1.125em;
       }
 
 
